syntax = "proto3";

option csharp_namespace = "TransactionService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CheckProduct{
  string item = 1;
}

message ChangeProduct{
  string item = 1;
  int32 num = 2;
}

message TransactionResponse{
  bool status = 1;
  int32 inventory = 2;
}

service ProductService{
  rpc CheckItem(CheckProduct) returns (TransactionResponse) {}
  rpc ChangeItem(ChangeProduct) returns (TransactionResponse) {}
}